--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -174,6 +174,41 @@ body {
     color: #ff5c5c;
 }
 
+.user-profile {
+    margin-top: auto;
+    padding: 15px;
+    border-top: 1px solid #ccc;
+    text-align: center;
+}
+
+.user-profile button {
+    background: #ff4b4b;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.user-profile button:hover {
+    background: #860a0a;
+}
+
+.user-profile .register {
+    background: rgb(66, 139, 66);
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.user-profile .register:hover {
+    background: green;
+}
+
 
 /* Responsive */
 @media (max-width: 768px) {
