--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="cLogo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ConvoAI</title>
     <link rel="stylesheet" href="/styles/style.css" />
@@ -18,6 +19,10 @@
             </div>
             <button id="newChatBtn" class="new-chat-btn">+ New Chat</button>
             <ul id="chatList" class="chat-list"></ul>
+            <!-- User Profile Section -->
+            <div class="user-profile">
+                <!-- This will be filled dynamically -->
+            </div>
         </aside>
 
         <!-- Main Chat Area -->
